Migrate to Grafana Operator on Openshift

--- a/apps/monitoring/base/grafana/kustomization.yaml
+++ b/apps/monitoring/base/grafana/kustomization.yaml
@@ -4,23 +4,8 @@ kind: Kustomization
 namespace: model-monitoring
 
 resources:
-  - grafana-deployment.yaml
-  - grafana-service.yaml
-  - grafana-route.yaml
-
-configMapGenerator:
-  - name: grafana-datasources
-    files:
-      - prometheus-datasource.yaml=datasource-prometheus.yaml
-
-  - name: grafana-provisioning
-    files:
-      - dashboards.yaml=dashboards-provisioning.yaml
-
-  - name: grafana-dashboards-json
-    files:
-      - local-models-dashboard.json=dashboards/local-models-dashboard.json
-      - external-usage-dashboard.json=dashboards/external-usage-dashboard.json
-
-generatorOptions:
-  disableNameSuffixHash: true
+  - grafana.yaml
+  - grafana-datasource.yaml
+  - grafana-folder.yaml
+  - grafana-dashboard-local-models.yaml
+  - grafana-dashboard-ai-providers.yaml
