TEMP disable ai-providers until robotheus is ready

--- a/apps/monitoring/base/grafana/kustomization.yaml
+++ b/apps/monitoring/base/grafana/kustomization.yaml
@@ -8,4 +8,4 @@ resources:
   - grafana-datasource.yaml
   - grafana-folder.yaml
   - grafana-dashboard-local-models.yaml
-  - grafana-dashboard-ai-providers.yaml
+  # - grafana-dashboard-ai-providers.yaml
