Fix prometheus namespace issue

--- a/apps/monitoring/base/grafana/grafana-datasource.yaml
+++ b/apps/monitoring/base/grafana/grafana-datasource.yaml
@@ -10,6 +10,6 @@ spec:
     name: Prometheus
     type: prometheus
     access: proxy
-    url: http://prometheus-operated.monitoring.svc:9090
+    url: http://prometheus-operated.model-monitoring.svc:9090
     isDefault: true
     editable: false
