--- a/apps/monitoring/base/grafana/grafana-datasource.yaml
+++ b/apps/monitoring/base/grafana/grafana-datasource.yaml
@@ -14,4 +14,14 @@ spec:
     isDefault: true
     editable: false
     jsonData:
+      httpHeaderName1: Authorization
       tlsSkipVerify: true
+    secureJsonData:
+      httpHeaderValue1: Bearer ${token}
+  valuesFrom:
+    - targetPath: datasource.secureJsonData.httpHeaderValue1
+      valueFrom:
+        secretKeyRef:
+          name: grafana-admin
+          key: token
+          optional: false
