--- a/apps/monitoring/base/grafana/kustomization.yaml
+++ b/apps/monitoring/base/grafana/kustomization.yaml
@@ -8,5 +8,5 @@ resources:
   - grafana.yaml
   - grafana-datasource.yaml
   - grafana-folder.yaml
-  # - grafana-dashboard-local-models.yaml
+  - grafana-dashboard-local-models.yaml
   - grafana-dashboard-ai-providers.yaml
