Support sync waves

--- a/apps/monitoring/base/grafana/grafana-folder.yaml
+++ b/apps/monitoring/base/grafana/grafana-folder.yaml
@@ -2,6 +2,8 @@ apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaFolder
 metadata:
   name: gitops
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   instanceSelector:
     matchLabels:
