--- a/apps/monitoring/base/grafana/grafana-dashboard-ai-providers.yaml
+++ b/apps/monitoring/base/grafana/grafana-dashboard-ai-providers.yaml
@@ -2,6 +2,8 @@ apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaDashboard
 metadata:
   name: ai-providers
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"
 spec:
   instanceSelector:
     matchLabels:
