--- a/apps/monitoring/base/grafana/grafana-datasource.yaml
+++ b/apps/monitoring/base/grafana/grafana-datasource.yaml
@@ -2,6 +2,8 @@ apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaDatasource
 metadata:
   name: prometheus
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   resyncPeriod: 5m
   instanceSelector:
