--- a/apps/monitoring/base/grafana/grafana.yaml
+++ b/apps/monitoring/base/grafana/grafana.yaml
@@ -4,6 +4,8 @@ metadata:
   name: grafana
   labels:
     dashboards: "grafana"
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
 spec:
   config:
     log:
