--- a/apps/monitoring/base/grafana/kustomization.yaml
+++ b/apps/monitoring/base/grafana/kustomization.yaml
@@ -5,6 +5,7 @@ namespace: model-monitoring
 
 resources:
   - grafana-rbac.yaml
+  - grafana-sa.yaml
   - grafana.yaml
   - grafana-datasource.yaml
   - grafana-folder.yaml
