--- a/apps/monitoring/base/grafana/grafana-dashboard-local-models.yaml
+++ b/apps/monitoring/base/grafana/grafana-dashboard-local-models.yaml
@@ -76,7 +76,7 @@ spec:
           "targets": [
             {
               "refId": "A",
-              "expr": "count by (node) (max by (pod, node) (kube_pod_info{namespace=\"vllm\", pod=~\".*predictor.*\"}))",
+              "expr": "count by (node) (max by (pod, node) (kube_pod_info{namespace=\"vllm\", pod=~\".*predictor.*\"})) or (0 * count by (node) (kube_node_info))",
               "instant": true
             }
           ]
