Fix issue with duplicate names

--- a/apps/monitoring/base/grafana/grafana-datasource.yaml
+++ b/apps/monitoring/base/grafana/grafana-datasource.yaml
@@ -25,5 +25,5 @@ spec:
     - targetPath: "secureJsonData.httpHeaderValue1"
       valueFrom:
         secretKeyRef:
-          name: grafana-sa-token
+          name: grafana-prometheus-sa-token
           key: token
