--- a/apps/monitoring/base/grafana/grafana-prometheus-sa.yaml
+++ b/apps/monitoring/base/grafana/grafana-prometheus-sa.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: grafana-sa
+  name: grafana-prometheus-sa
   annotations:
     argocd.argoproj.io/sync-wave: "0"
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: grafana-sa-token
+  name: grafana-prometheus-sa-token
   annotations:
-    kubernetes.io/service-account.name: grafana-sa
+    kubernetes.io/service-account.name: grafana-prometheus-sa
     argocd.argoproj.io/sync-wave: "0"
 type: kubernetes.io/service-account-token
 ---
@@ -26,5 +26,5 @@ roleRef:
   name: cluster-monitoring-view
 subjects:
   - kind: ServiceAccount
-    name: grafana-sa
+    name: grafana-prometheus-sa
     namespace: model-monitoring
