--- a/apps/monitoring/base/rolling-demo/rolling-demo-prometheus.yaml
+++ b/apps/monitoring/base/rolling-demo/rolling-demo-prometheus.yaml
@@ -4,6 +4,35 @@ metadata:
   name: rhdh-prometheus
   namespace: rolling-demo-ns
 ---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: rhdh-prometheus
+  namespace: rolling-demo-ns
+rules:
+- apiGroups: [""]
+  resources: ["services", "endpoints", "pods"]
+  verbs: ["get", "list", "watch"]
+- apiGroups: ["discovery.k8s.io"]
+  resources: ["endpointslices"]
+  verbs: ["get", "list", "watch"]
+- apiGroups: ["monitoring.coreos.com"]
+  resources: ["servicemonitors"]
+  verbs: ["get", "list", "watch"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: rhdh-prometheus
+  namespace: rolling-demo-ns
+subjects:
+- kind: ServiceAccount
+  name: rhdh-prometheus
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: rhdh-prometheus
+---
 apiVersion: monitoring.coreos.com/v1
 kind: Prometheus
 metadata:
@@ -14,7 +43,7 @@ spec:
   serviceMonitorSelector: {}
   serviceMonitorNamespaceSelector:
     matchNames:
-      - rolling-demo-ns
+    - rolling-demo-ns
   resources:
     requests:
       memory: 512Mi
