Enhance rolling demo dashboard

--- a/apps/monitoring/base/grafana/grafana-dashboard-rolling-demo.yaml
+++ b/apps/monitoring/base/grafana/grafana-dashboard-rolling-demo.yaml
@@ -21,15 +21,80 @@ spec:
 
         {
           "type": "row",
-          "title": "Service Availability & Latency",
+          "title": "Pod Health (rolling-demo-ns)",
           "gridPos": { "x": 0, "y": 0, "w": 24, "h": 1 }
+        },
+
+        {
+          "type": "stat",
+          "title": "Failed Pods",
+          "description": "Number of pods in Failed phase in rolling-demo-ns.",
+          "datasource": { "type": "prometheus", "uid": "prometheus" },
+          "gridPos": { "x": 0, "y": 1, "w": 6, "h": 5 },
+          "fieldConfig": {
+            "defaults": {
+              "thresholds": { "mode": "absolute", "steps": [{ "color": "green", "value": null }, { "color": "red", "value": 1 }] }
+            }
+          },
+          "targets": [
+            { "expr": "count(kube_pod_status_phase{namespace=\"rolling-demo-ns\", phase=\"Failed\"} == 1) or vector(0)", "instant": true }
+          ]
+        },
+
+        {
+          "type": "stat",
+          "title": "Pending Pods",
+          "description": "Number of pods in Pending phase in rolling-demo-ns.",
+          "datasource": { "type": "prometheus", "uid": "prometheus" },
+          "gridPos": { "x": 6, "y": 1, "w": 6, "h": 5 },
+          "fieldConfig": {
+            "defaults": {
+              "thresholds": { "mode": "absolute", "steps": [{ "color": "green", "value": null }, { "color": "yellow", "value": 1 }, { "color": "red", "value": 3 }] }
+            }
+          },
+          "targets": [
+            { "expr": "count(kube_pod_status_phase{namespace=\"rolling-demo-ns\", phase=\"Pending\"} == 1) or vector(0)", "instant": true }
+          ]
+        },
+
+        {
+          "type": "stat",
+          "title": "Running Pods",
+          "description": "Number of pods in Running phase in rolling-demo-ns.",
+          "datasource": { "type": "prometheus", "uid": "prometheus" },
+          "gridPos": { "x": 12, "y": 1, "w": 6, "h": 5 },
+          "fieldConfig": {
+            "defaults": {
+              "thresholds": { "mode": "absolute", "steps": [{ "color": "red", "value": null }, { "color": "green", "value": 1 }] }
+            }
+          },
+          "targets": [
+            { "expr": "count(kube_pod_status_phase{namespace=\"rolling-demo-ns\", phase=\"Running\"} == 1) or vector(0)", "instant": true }
+          ]
+        },
+
+        {
+          "type": "timeseries",
+          "title": "Container Restarts",
+          "description": "Rate of container restarts in rolling-demo-ns.",
+          "datasource": { "type": "prometheus", "uid": "prometheus" },
+          "gridPos": { "x": 18, "y": 1, "w": 6, "h": 5 },
+          "targets": [
+            { "expr": "sum by (pod) (rate(kube_pod_container_status_restarts_total{namespace=\"rolling-demo-ns\"}[5m]))", "legendFormat": "{{ pod }}" }
+          ]
+        },
+
+        {
+          "type": "row",
+          "title": "Service Availability & Latency",
+          "gridPos": { "x": 0, "y": 6, "w": 24, "h": 1 }
         },
 
         {
           "type": "stat",
           "title": "Scrape Target Up",
           "datasource": { "type": "prometheus", "uid": "prometheus-user-workload" },
-          "gridPos": { "x": 0, "y": 1, "w": 6, "h": 6 },
+          "gridPos": { "x": 0, "y": 7, "w": 6, "h": 6 },
           "targets": [
             {
               "expr": "max(up)",
