--- a/apps/monitoring/base/grafana/kustomization.yaml
+++ b/apps/monitoring/base/grafana/kustomization.yaml
@@ -12,3 +12,4 @@ resources:
   - grafana-dashboard-local-models.yaml
   - grafana-dashboard-ai-providers.yaml
   - grafana-dashboard-rolling-demo.yaml
+  - rolling-demo-prometheus-rules.yaml
