--- a/argocd/apps/model-monitoring.yaml
+++ b/argocd/apps/model-monitoring.yaml
@@ -1,18 +1,20 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: model-observability-gitops
+  name: model-monitoring
   namespace: openshift-gitops
 spec:
   project: default
   source:
     repoURL: https://github.com/thepetk/model-observability-gitops.git
     targetRevision: HEAD
-    path: argocd/apps
+    path: apps/monitoring/overlays/dev
   destination:
     server: https://kubernetes.default.svc
-    namespace: openshift-gitops
+    namespace: model-monitoring
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
