--- a/apps/monitoring/base/grafana/rolling-demo-prometheus-rules.yaml
+++ b/apps/monitoring/base/grafana/rolling-demo-prometheus-rules.yaml
@@ -3,6 +3,8 @@ kind: PrometheusRule
 metadata:
   name: rolling-demo-rules
   namespace: model-monitoring
+  labels:
+    openshift.io/prometheus-rule-evaluation-scope: leaf-prometheus
 spec:
   groups:
     - name: rolling-demo.health
